--- a/BlocdeNotas/BlocdeNotas.csproj
+++ b/BlocdeNotas/BlocdeNotas.csproj
@@ -70,16 +70,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="NotePage.xaml.cs">
-	    <DependentUpon>NotePage.xaml</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiXaml Update="AboutPage.xaml">
+	  <MauiXaml Update="Views\AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="NotePage.xaml">
+	  <MauiXaml Update="Views\AllNotesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\NotePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
